--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "vk-miniapps-deploy"
   },
   "keywords": [],
   "author": "",
